; ModuleID = '/home/carl/AnghaBench/linux/drivers/ssb/extr_driver_pcicore.c_pcicore_write16.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ssb/extr_driver_pcicore.c_pcicore_write16.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ssb_pcicore = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ssb_pcicore*, i32, i32)* @pcicore_write16 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pcicore_write16(%struct.ssb_pcicore* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.ssb_pcicore*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.ssb_pcicore* %0, %struct.ssb_pcicore** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.ssb_pcicore*, %struct.ssb_pcicore** %4, align 8
  %8 = getelementptr inbounds %struct.ssb_pcicore, %struct.ssb_pcicore* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @ssb_write16(i32 %9, i32 %10, i32 %11)
  ret void
}

declare dso_local i32 @ssb_write16(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
